Update color scheme
Updated color scheme to a red-light green-light system for the strength meter.

--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
     <div class="wrapper">
       <div class="meter">
         <h1>Password Strength Tester</h1>
-        <div id="strength-meter" class="strength-meter"></div>
+        <div id="strength-meter" class="strength-meter">
+          <div class="strength-level"></div>
+        </div>
       </div>
       <input
         type="text"
         id="password-input"
         class="password-input"
-        placeholder="Check a Password"
+        placeholder="Enter a Password"
         auto
         aria-labelledby="Enter a password to check the strength"
       />
